[tool.poetry]
name = "shipmmg"
version = "0.0.10"
description = "A Python package of ship maneuvering simulation"
readme = "README.md"
authors = ["Taiga MITSUYUKI <mitsuyuki-taiga-my@ynu.ac.jp>"]
repository="https://github.com/ShipMMG/shipmmg"
documentation = "https://shipmmg.github.io/shipmmg/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
scipy = "^1.9.0"
matplotlib = "^3.6.0"
pytest-cov = "^3"
Pillow = ">=9.4,<11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
