[tool.poetry]
name = "shipmmg"
version = "0.0.11"
description = "A Python package of ship maneuvering simulation"
readme = "README.md"
authors = ["Taiga MITSUYUKI <mitsuyuki-taiga-my@ynu.ac.jp>"]
repository="https://github.com/ShipMMG/shipmmg"
documentation = "https://shipmmg.github.io/shipmmg/"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
scipy = "^1.16.0"
matplotlib = "^3.10.0"
Pillow = ">=9.4,<13.0"
numpy = "^2.3"
scikit-learn = "^1.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<10.0"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
